crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_property_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 209
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    property int Foo {}\n                  |\n                  ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 17
      },
      "end": {
        "line": 1,
        "character": 20
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 23
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 17
      },
      "end": {
        "line": 1,
        "character": 20
      }
    }
  }
]
