crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_property_getter_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 241
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    property int Foo {\n        public get() { return 1; }\n                |\n                ^\n    }\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 15
      },
      "end": {
        "line": 2,
        "character": 18
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 34
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 15
      },
      "end": {
        "line": 2,
        "character": 18
      }
    }
  }
]
