crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_property_native_3.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 426
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    property int Foo {\n        public native set(int foo);\n                               |\n                               ^\n        }\n    }\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 30
      },
      "end": {
        "line": 2,
        "character": 33
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 26
      },
      "end": {
        "line": 2,
        "character": 33
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 30
      },
      "end": {
        "line": 2,
        "character": 33
      }
    }
  }
]
